[Java] Use new Selector API and fix samples.